--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ theme: jekyll-theme-slate
 github:
   is_project_page: true
   repository_url: https://github.com/cat2151/smf-to-ym2151log-rust
+plugins:
+  - jekyll-sitemap
